contact,login,register with material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,28 @@
-<app-menu (selectedPage)="changePage($event)" [currentPage]="page"></app-menu>
-<!--
-<ng-container [ngSwitch]="page">
-  <ng-container *ngSwitchCase="'main'">
-    <div class="main_component">
-      <app-main></app-main>
-    </div>
-  </ng-container>
-  <ng-container *ngSwitchCase="'gallery'">
-    <app-gallery></app-gallery>
-  </ng-container>
-  <ng-container *ngSwitchCase="'contact'">
-    <app-contact>
-      <h1>This is the contact page.</h1>
-    </app-contact>
-  </ng-container>
-  <ng-container *ngSwitchDefault>
-    <h1>Page not found...</h1>
-  </ng-container>
-</ng-container>
--->
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav>
+    <app-menu (selectedPage)="changePage($event)" [currentPage]="page" (onCloseSidenav)="onClose($event, sidenav)"></app-menu>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <div fxHide.gt-sm>
+        <button mat-icon-button (click)="onToggleSidenav(sidenav)">
+          <mat-icon>menu</mat-icon>
+        </button>
+      </div>
+      <div>Rising Sun Artistry</div>
+      <div fxFlex fxLayout fxLayoutAlign="center" fxHide.sm>
+        <ul fxLayout fxLayoutGap="10px" class="menu_list">
+          <li class="menu-item"><a routerLink="/main">Main</a></li>
+          <li class="menu-item"><a routerLink="/gallery">Gallery</a></li>
+          <li class="menu-item"><a routerLink="/introduce">Introducing</a></li>
+          <li class="menu-item"><a routerLink="/booking">Booking an appointment</a></li>
+          <li class="menu-item"><a routerLink="/login">Login</a></li>
+          <li class="menu-item"><a routerLink="/register">Register</a></li>
+        </ul>
+      </div>
+    </mat-toolbar>
+    <router-outlet></router-outlet>
+    <app-contact></app-contact>
+  </mat-sidenav-content>
+</mat-sidenav-container>
 
-<app-contact></app-contact>
