--- a/src/app/shared/contact/contact.component.html
+++ b/src/app/shared/contact/contact.component.html
@@ -1,1 +1,51 @@
 <p>contact works!</p>
+
+<div class="main_component">
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Contact</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="columns">
+            <div class="first-column">
+                <div class="brand-container">
+                    <p class="brand">Rising Sun Artistry</p>
+                    <p class="under-text">Vienna Tattoo</p>
+                </div>
+            </div>
+            <div class="second-column">
+                <div class="address">
+                    <p><mat-icon>flag</mat-icon> 1070, Vienna Example str 3.</p>
+                </div>
+                <dir class="open">
+                    <div class="days">
+                        <p>Monday - Friday</p>
+                        <p>Saturday</p>
+                        <p>Sunday</p>
+                    </div>
+                    <div class="hours">
+                        <p>10:00-18:00</p>
+                        <p>11:00-18:00</p>
+                        <p>11:00-18:00</p>
+                    </div>
+                </dir>
+                <div class="phone">
+                    <a><mat-icon>call</mat-icon> +1234/567-8900</a>
+                </div>
+                <div class="documents">
+                    <p>Documents</p>
+                    <a href="">doc1</a>
+                    <a href="">doc2</a>
+                    <a href="">doc3</a>
+                    <a href="">doc4</a>
+                </div>
+            </div>
+            <div class="third-column">
+                <div class="social-media">
+                    <p>facebook</p>
+                    <p>instagram</p>
+                    <p>x</p>
+                </div>
+            </div>
+        </mat-card-content>
+    </mat-card>
+</div>
