--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,15 +1,18 @@
+<span class="loading-indicator" *ngIf="loading"><mat-spinner></mat-spinner></span>
+<h1>Login</h1>
 <div class="main_component">
-    <h1>Login</h1>
-    <span>
-        <Label for="email">Email</Label>
-        <input type="email" [formControl]="email">
-    </span>
-    <span>
-        <Label for="password">Password</Label>
-        <input type="password" [formControl]="password">
-    </span>
-    <span>
-        <button (click)="login()">Login</button>
-        <button [routerLink]="'/register'">Register</button>
-    </span>
+    <div class="form">
+        <mat-form-field>
+            <mat-label for="email">Email</mat-label>
+            <input matInput type="email" [formControl]="email">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label for="password">Password</mat-label>
+            <input matInput type="password" [formControl]="password">
+        </mat-form-field>
+        <div class="buttons">
+            <button class="button" mat-raised-button color="primary" (click)="login()">Login</button>
+            <button class="button" mat-raised-button [routerLink]="'/register'">Register</button>
+        </div>
+    </div>
 </div>
