--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -1,32 +1,34 @@
-<div class="main_component">
+<div>
     <h1>Register</h1>
+</div>
+<div class="main_component">
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit">
         <div formGroupName="name">
-            <div>
-                <Label for="firstname">First name</Label>
-                <input type="text" formControlName="firstname">
-            </div>
-            <div>
-                <Label for="lastname">Last name</Label>
-                <input type="text" formControlName="lastname">
-            </div>
+            <mat-form-field>
+                <mat-label for="firstname">First name</mat-label>
+                <input matInput type="text" formControlName="firstname">
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label for="lastname">Last name</mat-label>
+                <input matInput type="text" formControlName="lastname">
+            </mat-form-field>
         </div>
-        <div>
-            <Label for="email">Email</Label>
-            <input type="email" formControlName="email">
-        </div>
-        <div>
-            <Label for="password">Password</Label>
-            <input type="password" formControlName="password">
-        </div>
-        <div>
-            <Label for="repassword">Password again</Label>
-            <input type="password" formControlName="repassword">
-        </div>
-        <div>
-            <button type="submit">Register</button>
-            <button [routerLink]="'/login'">Login</button>
-            <button (click)="goBack()">Back</button>
+        <mat-form-field>
+            <mat-label for="email">Email</mat-label>
+            <input matInput type="email" formControlName="email">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label for="password">Password</mat-label>
+            <input matInput type="password" formControlName="password">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label for="repassword">Password again</mat-label>
+            <input matInput type="password" formControlName="repassword">
+        </mat-form-field>
+        <div class="buttons">
+            <button class="button" mat-raised-button color="primary" type="submit">Register</button>
+            <button class="button" mat-raised-button [routerLink]="'/login'">Login</button>
+            <!--<button (click)="goBack()">Back</button> -->
         </div>
     </form>
 </div>
