--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,13 +1,4 @@
 <!--
-<select [(ngModel)]="currentPage" (change)="menuSwitch()">
-    <option value="main">Main</option>
-    <option value="gallery">Gallery</option>
-    <option value="introduce">Introducing</option>
-    <option value="booking">Booking an appointment</option>
-    <option value="login">Login</option>
-    <option value="register">Register</option>
-</select>
--->
 <header class="menu">
     <nav class="menu-nav">
       <ul class="menu-list">
@@ -20,5 +11,24 @@
       </ul>
     </nav>
   </header>
-  
-  
+-->
+<mat-nav-list>
+    <a mat-list-item routerLink="/main" (click)="close()">
+      <span>Main</span>
+    </a>
+    <a mat-list-item routerLink="/gallery" (click)="close()">
+      <span>Gallery</span>
+    </a>
+    <a mat-list-item routerLink="/introduce" (click)="close()">
+      <span>Introducing</span>
+    </a>
+    <a mat-list-item routerLink="/booking" (click)="close()">
+      <span>Booking an appointment</span>
+    </a>
+    <a mat-list-item routerLink="/login" (click)="close()">
+      <span>Login</span>
+    </a>
+    <a mat-list-item routerLink="/register" (click)="close()">
+      <span>Register</span>
+    </a>
+  </mat-nav-list>
