--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,29 @@
+/* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.loading-indicator{
+    position: fixed;
+    z-index: 99;
+    height: 1em;
+    width: 1em;
+    margin: auto;
+    overflow: show;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.loading-indicator::before{
+    content: '';
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(0, 0, 0, 0.3);
+}
