--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,21 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+$bgcolor: azure;
 
-.loading-indicator{
+html {
+    background-color: $bgcolor;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.loading-indicator {
     position: fixed;
-    z-index: 99;
+    z-index: 999;
     height: 1em;
     width: 1em;
-    margin: auto;
     overflow: show;
+    margin: auto;
     top: 0;
-    bottom: 0;
     left: 0;
+    bottom: 0;
     right: 0;
 }
-.loading-indicator::before{
+
+.loading-indicator::before {
     content: '';
     display: block;
     position: fixed;
@@ -23,7 +37,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     left: 0;
     bottom: 0;
     right: 0;
-    height: 100%;
     width: 100%;
-    background-color: rgb(0, 0, 0, 0.3);
+    height: 100%;
+    background-color: rgba(0,0,0, 0.3);
 }
