--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -7,5 +7,85 @@ div {
 }
 
 .main_component {
-    height: 100vh;
+    width: 100%;
+}
+
+.main_component header img{
+    width: 100%;
+    height: 50rem;
+    object-fit: cover;
+    /*object-position: ? ?;*/
+}
+
+.introducing-section {
+    padding: 9rem 0 5rem 0;
+}
+.introducing-section p {
+    padding: 5rem 10rem 7rem 10rem;
+}
+
+.introducing-section img {
+    width: 100%;
+}
+
+.introducing-section, .crew-artists-section {
+    color: white;
+    margin-bottom: 20px;
+    text-align: center;
+
+    h2 {
+        margin-bottom: 3rem;
+        color: #f1f1f1;
+        font-size: 4em;
+    }
+
+    p {
+        margin: 0;
+        color: #ccc;
+    }
+}
+
+.artists-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    .artist-card {
+      width: 45%;
+      max-width: 200px;
+      background-color: #2a2a2a;
+      margin-bottom: 20px;
+      text-align: center;
+      overflow: hidden;
+      border-radius: 8px;
+
+      .artist-image {
+        width: 100%;
+        height: auto;
+        display: block;
+      }
+
+      .artist-info {
+        background-color: #4a4a4a;
+        padding: 10px;
+
+        p {
+          margin: 5px 0;
+        }
+      }
+    }
+}
+
+
+.opening-img {
+    width: 100%;
+    
+}
+
+.title {
+    z-index: 99;
+    color: white;
+    position: absolute;
+    top: 5em;
+    font-size: 8em;
 }
