--- a/src/app/pages/profile/occasion/occasion.component.html
+++ b/src/app/pages/profile/occasion/occasion.component.html
@@ -1,1 +1,51 @@
-<p>occasion works!</p>
+<span class="loading-indicator" *ngIf="loading">
+    <mat-spinner></mat-spinner>
+</span>
+
+
+<div class="occasion-content">
+    <div class="occasion-details">
+        <p>{{ actualOccasionInput!.description }}</p>
+        <p>{{ actualOccasionInput!.date | dateFormat }}</p>
+    </div>
+    <img [src]="loadedImageUrl" [alt]="loadedImage?.image_name" class="tattoo-image">
+</div>
+
+<div class="comment-section">
+
+    <!--if the actual occasion has comment-->
+    <mat-card-actions *ngIf="comment">
+        <form [formGroup]="commentForm" (ngSubmit)="updateComment()">
+            <div class="comment-box">
+                <p>{{ comment.date | dateFormat }}</p>
+                <mat-form-field>
+                    <mat-label for="comment">Write your experience:</mat-label>
+                    <textarea matInput rows="10" cols="50" formControlName="comment" matInput></textarea>
+                </mat-form-field>
+                <div>
+                    <button mat-raised-button color="primary" type="submit">
+                        Comment
+                    </button>
+                </div>
+            </div>
+        </form>
+    </mat-card-actions>
+
+    <!--if the actual occasion has no comment-->
+    <mat-card-actions *ngIf="!comment">
+        <form [formGroup]="commentForm" (ngSubmit)="addComment()">
+            <div class="comment-box">
+                <mat-form-field>
+                    <mat-label for="comment">Write your experience:</mat-label>
+                    <textarea matInput rows="10" cols="50" formControlName="comment" matInput placeholder="Write a comment for your occasion"></textarea>
+                </mat-form-field>
+                <div>
+                    <button mat-raised-button color="primary" type="submit">
+                        Comment
+                    </button>
+                </div>
+            </div>
+        </form>
+    </mat-card-actions>
+
+</div>
