--- a/src/app/shared/contact/contact.component.html
+++ b/src/app/shared/contact/contact.component.html
@@ -1,8 +1,5 @@
 <div class="main_component">
     <mat-card>
-        <mat-card-header>
-            <mat-card-title>Contact</mat-card-title>
-        </mat-card-header>
         <mat-card-content class="columns">
             <div class="first-column">
                 <div class="brand-container">
@@ -31,17 +28,16 @@
                 </div>
                 <div class="documents">
                     <p>Documents</p>
-                    <a href="">doc1</a>
-                    <a href="">doc2</a>
-                    <a href="">doc3</a>
-                    <a href="">doc4</a>
+                    <a href="">Privacy Policy</a>
+                    <a href="">Informed consent (tattoo)</a>
+                    <a href="">Parental consent form (tattoo)</a>
                 </div>
             </div>
             <div class="third-column">
                 <div class="social-media">
-                    <p>facebook</p>
-                    <p>instagram</p>
-                    <p>x</p>
+                    <a href=""><p>facebook</p></a>
+                    <a href=""><p>instagram</p></a>
+                    <a href=""><p>x</p></a>
                 </div>
             </div>
         </mat-card-content>
