--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
           </button>
         </div>
         <div>Rising Sun Artistry</div>
-        <div fxFlex fxLayout fxLayoutAlign="center" fxHide.sm>
+        <div fxFlex fxLayout fxLayoutAlign="center" fxHide.lt-sm>
           <ul fxLayout fxLayoutGap="10px" class="menu_list">
             <li class="menu-item"><a routerLink="/main">Main</a></li>
             <li class="menu-item"><a routerLink="/gallery">Gallery</a></li>
