--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,12 +18,8 @@ mat-sidenav-container{
 }
 
 .sticky-menu {
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
     z-index: 100;
   }
-
-.content {
-    margin-top: 4rem;
-}
