--- a/src/app/pages/profile/occasion/occasion.component.scss
+++ b/src/app/pages/profile/occasion/occasion.component.scss
@@ -1,25 +1,79 @@
 .occasion-item {
     margin-bottom: 20px;
 }
-  
+
 .occasion-content {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    padding: 20px;
+    background-color: #4a4a4a;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+
+    @media (min-width: 768px) {
+        flex-direction: row;
+        align-items: flex-start;
+    }
+}
+
+.occasion-details {
+    flex: 1;
+    margin-bottom: 20px;
+    color: #ddd;
+    text-align: center;
+
+    @media (min-width: 768px) {
+        text-align: left;
+        margin-right: 20px;
+        margin-bottom: 0;
+    }
+
+    h3 {
+        font-size: 1.5em;
+        margin-bottom: 10px;
+    }
+
+    p {
+        font-size: 1.2em;
+        margin-bottom: 10px;
+    }
+}
+
+img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-top: 10px;
+
+    @media (min-width: 768px) {
+        margin-top: 0;
+        margin-left: 20px;
+    }
 }
 
 .comment-section {
+    margin-top: 20px;
+    margin-bottom: 5rem;
+
+    mat-card {
+        padding: 20px;
+        background-color: transparent;
+    }
+}
+
+.comment-box {
     display: flex;
-    align-items: center;
-    margin-top: 10px;
-}
+    flex-direction: column;
 
-.comment-section textarea {
-    flex: 1;
-    margin-right: 10px;
-}
+    p {
+        margin-bottom: 10px;
+        color: #ddd;
+    }
 
-.tattoo-image {
-    width: 10rem;
-    height: 10rem;
+    mat-form-field {
+        width: 100%;
+    }
 }
-
