login register style + some correction

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,6 +1,9 @@
-<span class="loading-indicator" *ngIf="loading"><mat-spinner></mat-spinner></span>
-<h1>Login</h1>
+<span class="loading-indicator" *ngIf="loading">
+    <mat-spinner></mat-spinner>
+</span>
+
 <div class="main_component">
+    <h1>Login Into Your Profile</h1>
     <div class="form">
         <mat-form-field>
             <mat-label for="email">Email</mat-label>
