--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -1,7 +1,8 @@
-<div>
-    <h1>Register</h1>
-</div>
 <div class="main_component">
+    <div class="title">
+        <h1>Register</h1>
+        <p>To Get Access To Booking and See Your Previous Tattoo Sessions</p>
+    </div>
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div formGroupName="name">
             <mat-form-field>
